--- a/main.css
+++ b/main.css
@@ -6,3 +6,18 @@ h1 {
     font-family: 'Roboto Slab'; 
     font-size: 42px
 }
+ul {
+    background-color: #eceff4;
+}
+li {
+    margin: 5px;
+    padding: 5px;
+    color: #2e3440;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+}
+li:hover {
+    background-color: #81a1c1;
+    color: #eceff4;
+}
