--- a/main.css
+++ b/main.css
@@ -1,23 +1,54 @@
-body {
-    background-color: #4c566a;
-}
-h1 {
-    color: #d8dee9;
+* {
     font-family: 'Roboto Slab'; 
-    font-size: 42px
+    margin: 0;
+    padding: 0;
 }
-ul {
-    background-color: #eceff4;
+body {
+    background-color: white;
 }
-li {
-    margin: 5px;
-    padding: 5px;
-    color: #2e3440;
+
+header {
+    overflow: hidden;
+    background-color: #d8dee9;
+    text-align: right;
+    padding-right: 12px;
+}
+header li { 
+    text-transform: uppercase;
     display: inline-block;
-    text-align: center;
+    font-size: 15px;
+    padding: 5px;
+
+}
+header li:hover {
+    background-color: #a3be8c;
+}
+a, a:visited, a:link, a:hover {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
     text-decoration: none;
 }
-li:hover {
-    background-color: #81a1c1;
-    color: #eceff4;
+
+h1 {
+    padding-top: 1em;
+    color: #3b4252;
+    font-size: 42px
+}
+
+.title {
+    background-color: #eceff4;
+}
+.tea-images {
+    padding-top: 20px;
+    display: block;
+}
+img {
+    padding: 50px;
+    margin: 10px;
+    border: solid 1px #81a1c193;
+    box-shadow: 1px 3px 3px #3b42522c ;
+    
 }
