--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ h1 {
     padding-top: 1em;
     color: #3b4252;
     font-size: 38px;
+    font-family: 'Roboto Slab';
     text-transform: uppercase;
 }
 
@@ -99,7 +100,25 @@ h1 {
     font-size: 20px;
 }
 .contact-form-box {
-    padding : 0px 0px 20px 60px;
+    padding : 10px 10px 20px 60px;
     font-family: 'Roboto Slab';
     font-weight: 100;
+    display: flex;
+    flex-wrap: wrap;
+}
+.input, .input-message {
+    padding: 10px 50px 10px 10px;
+    font-size: 15px;
+    border: solid 2px #d08770
+}
+.input-message {
+    padding: 10px 601px 100px 10px;
+}
+.button-box {
+    padding: 20px 0px 10px 0px;
+}
+.button {
+    padding: 10px 20px 10px 20px;
+    font-size: 15px;
+    border: solid 1px #4c566a
 }
